Vulkan frame rendering refactor
Fence to interface and added mock
Simplified queue constraint in work class
Reordered frame buffer class, reintroduced group
Bodged frame composer to record commands (TODO)
Added frame selector for in-flight frames
Completed VK frame implementation
Refactored render task accordingly